--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boîtes avec contenu</title>
-    <link rel="stylesheet" type="text/css" href="teby.css">
+<link rel="stylesheet" href="about.css" />
+
 </head>
 <body>
     <header id="tete">
